[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/BaseEnemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/environment.sprites/environment2.tres" type="Texture" id=2]
[ext_resource path="res://sprites/environment.sprites/environment4.tres" type="Texture" id=3]
[ext_resource path="res://sprites/environment.sprites/environment24.tres" type="Texture" id=4]
[ext_resource path="res://sprites/environment.sprites/environment23.tres" type="Texture" id=5]
[ext_resource path="res://objects/HighlightAnimation.tres" type="Animation" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "fire",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=4]

resource_name = "hit"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.3 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 400, 40 )

[node name="BaseEnemy" type="Area2D" groups=[
"destroyable",
"enemy",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "idle"
centered = false
offset = Vector2( -8, -16 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Highlighter" type="Sprite" parent="Sprite" index="0"]

visible = false
self_modulate = Color( 1, 1, 1, 0.399572 )
texture = ExtResource( 5 )
offset = Vector2( 0.5, -8 )
_sections_unfolded = [ "Offset" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -8 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hit = SubResource( 4 )
anims/idle = ExtResource( 6 )
blend_times = [  ]

[node name="Vision" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision" index="0"]

visible = false
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="ReloadTimer" type="Timer" parent="." index="4"]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="." to="." method="_on_BaseEnemy_body_entered"]

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]

[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]


